
	* Fix bug in eet_connection code when running on 32bits machine.

2010-08-06  Cedric BAIL

	* Add EET_DATA_DESCRIPTOR_ADD_HASH_STRING.

2010-08-06  Cedric BAIL

	* Break eet_eina_* function helper to provide a clean API/ABI to
	prevent futur break. This should prevent the ABI break that was
	introduced with release 1.3.0.

	* Add a specific allocator for array. This should fix wrong allocation
	case discovered with recent edje file format change.

2010-08-23  Carsten Haitzler (The Rasterman)

        * Fix some cppcheck complaints - all of them bogus though.
        Nothing actually fixed.

2010-08-27  Cedric BAIL

	* Prevent the build of eet data structure that doesn't match what
	the application is expecting.

2010-09-02  Cedric BAIL

	* Fix bug of ever growing dictionnary and improve strcmp comparison.

2010-11-12  Cedric BAIL

	* Don't try to read broken file when open in READ_WRITE mode.

2010-11-14  Cedric BAIL

	* Fix bug with cypher and compression used together.

2010-11-21  Carsten Haitzler (The Rasterman)

	* Fix another bug related to cipher and compression (leak and
        bad free)

2010-11-25  Cedric BAIL

	* Add EET_DATA_DESCRIPTOR_ADD_VAR_ARRAY_STRING.

2010-11-26  Cedric BAIL

	* Reduce memory used by Eet dictionary.

2010-11-29  Cedric BAIL

	* Improve speed of Eet_String users. It does impact all string
	encoding/decoding, but even faster for stringshare encoding.

	* Improve speed when decoding mostly array with eet_data_read.

2010-12-03  Cedric BAIL

	* Improve portability.

2010-12-07  Carsten Haitzler (The Rasterman)

	* Move raw function pointer defs to typedefs in public API for
        readability improvements.

2011-01-29  Carsten Haitzler (The Rasterman)

	* 1.4.0 release

2011-01-29  Vincent Torri

	* Use eina_stringshare_add() instead of strdup() on mmaped file names
	on Windows. This fix eet shut down on Windows.

2011-05-23  Vincent Torri

	* Fix compilation with libjpeg 8 on Windows.

2011-05-23  Cedric Bail

	* 1.4.1 release
